--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "next-start-kovalchuk",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Serhii-P.github.io/next-start",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.9"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "typescript": "^4.8.3"
   }
 }
